force-app/main/default/objects/Slot__c/Slot__c.object-meta.xml
<CustomObject>
    <label>Appointment Slot</label>
    <nameField>
        <displayFormat>SLOT-{0000000}</displayFormat>
        <label>Slot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>