force-app/main/default/objects/Slot__c/fields/Booked_Count__c.field-meta.xml
<CustomField>
    <fullName>Booked_Count__c</fullName>
    <label>Booked Count</label>
    <summaryForeignKey>Appointment__c.Slot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>