force-app/main/default/objects/Slot__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <label>Is Available</label>
    <type>Checkbox</type>
    <formula>Booked_Count__c &lt; Capacity__c</formula>
</CustomField>