force-app/main/default/objects/Slot__c/fields/PSK_Office__c.field-meta.xml
<CustomField>
    <fullName>PSK_Office__c</fullName>
    <label>PSK Office</label>
    <type>MasterDetail</type>
    <referenceTo>PSK__c</referenceTo>
    <relationshipName>Slots</relationshipName>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>