force-app/main/default/objects/Slot__c/validationRules/End_Time_After_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_After_Start_Time</fullName>
    <active>true</active>
    <description>A slot with a zero or negative duration cannot be booked against.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Start_Time__c)), NOT(ISBLANK(End_Time__c)), End_Time__c &lt;= Start_Time__c )</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be later than Start Time.</errorMessage>
</ValidationRule>